--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "nodemon server.js",
     "server": "nodemon server.js",
     "client": "npm run dev --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": "empty",
   "author": "z3phyrondevs@gmail.com",
