--- a/client2/package.json
+++ b/client2/package.json
@@ -3,13 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+      "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+      "axios": "^0.27.2",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.3.4",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.6",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.0"
+     "react-spinners": "^0.12.0",
+    "react-toastify": "^9.0.1",
+    "redux": "^4.2.0",
+    "styled-components": "^5.3.5",
+    "use-clipboard-copy": "^0.2.0",
+    "web-vitals": "^2.1.0" ,
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
