--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon server.js",
     "server": "nodemon server.js",
-    "client": "npm run dev --prefix client",
+    "client": "npm start --prefix client2",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": "empty",
