--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client2",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client2 && npm run build --prefix client2"
   },
   "repository": "empty",
   "author": "z3phyrondevs@gmail.com",
