--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGO_URI = mongodb+srv://z3phyr:betty234@darkzcrts.kz03cp9.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = Hellgrave1798
 SALT = 10
-NODE_ENV = productionb
+NODE_ENV = production
 
 BASE_URL = http://localhost:3000/
 
